# api/auth/openapi.yaml
@@ -3,8 +3,562 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: Auth API
     version: 0.0.1
-paths: {}
+paths:
+    /manager/api/v1/auth:
+        post:
+            tags:
+                - Auth
+            description: Auth 接口鉴权
+            operationId: Auth_ApiAuth
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ApiAuthRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ApiAuthReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/auth/logs:
+        get:
+            tags:
+                - Auth
+            description: ListAuthLog 获取用户登陆信息列表
+            operationId: Auth_ListAuthLog
+            parameters:
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: username
+                  in: query
+                  schema:
+                    type: string
+                - name: createdAts
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListAuthLogReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/login:
+        post:
+            tags:
+                - Auth
+            description: UserLogin 用户登陆
+            operationId: Auth_UserLogin
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UserLoginRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserLoginReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/login/captcha:
+        get:
+            tags:
+                - Auth
+            description: GetUserLoginCaptcha 获取用户登陆验证吗
+            operationId: Auth_GetUserLoginCaptcha
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserLoginCaptchaReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/login/logs:
+        get:
+            tags:
+                - Auth
+            description: ListLoginLog 获取用户登陆信息列表
+            operationId: Auth_ListLoginLog
+            parameters:
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: username
+                  in: query
+                  schema:
+                    type: string
+                - name: createdAts
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListLoginLogReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/logout:
+        post:
+            tags:
+                - Auth
+            description: UserLogout 用户退出
+            operationId: Auth_UserLogout
+            requestBody:
+                content:
+                    application/json: {}
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content: {}
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/oauth/bind:
+        post:
+            tags:
+                - Auth
+            description: OAuthBind 三方授权绑定
+            operationId: Auth_OAuthBind
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/OAuthBindRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/OAuthBindReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/oauth/handler:
+        post:
+            tags:
+                - Auth
+            description: OAuthHandler 渠道授权处理
+            operationId: Auth_OAuthHandler
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/OAuthHandlerRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/OAuthHandlerReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/oauth/login:
+        post:
+            tags:
+                - Auth
+            description: OAuthLogin 三方授权登陆
+            operationId: Auth_OAuthLogin
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/OAuthLoginRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/OAuthLoginReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/oauth/report:
+        post:
+            tags:
+                - Auth
+            description: ReportOAuthCode 上报授权信息
+            operationId: Auth_ReportOAuthCode
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ReportOAuthCodeRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ReportOAuthCodeReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/token/parse:
+        post:
+            tags:
+                - Auth
+            description: ParseToken token解析
+            operationId: Auth_ParseToken
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ParseTokenRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ParseTokenReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /manager/api/v1/token/refresh:
+        post:
+            tags:
+                - Auth
+            description: UserRefreshToken 用户刷新token
+            operationId: Auth_UserRefreshToken
+            requestBody:
+                content:
+                    application/json: {}
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserRefreshTokenReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
-    schemas: {}
+    schemas:
+        ApiAuthReply:
+            type: object
+            properties:
+                userId:
+                    type: integer
+                    format: uint32
+                deptId:
+                    type: integer
+                    format: uint32
+                tenantId:
+                    type: integer
+                    format: uint32
+                username:
+                    type: string
+        ApiAuthRequest:
+            type: object
+            properties:
+                path:
+                    type: string
+                method:
+                    type: string
+        GetUserLoginCaptchaReply:
+            type: object
+            properties:
+                uuid:
+                    type: string
+                captcha:
+                    type: string
+                expire:
+                    type: integer
+                    format: uint32
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ListAuthLogReply:
+            type: object
+            properties:
+                total:
+                    type: integer
+                    format: uint32
+                list:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ListAuthLogReply_Log'
+        ListAuthLogReply_Log:
+            type: object
+            properties:
+                username:
+                    type: string
+                api:
+                    type: string
+                method:
+                    type: string
+                name:
+                    type: string
+                createdAt:
+                    type: integer
+                    format: uint32
+        ListLoginLogReply:
+            type: object
+            properties:
+                total:
+                    type: integer
+                    format: uint32
+                list:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ListLoginLogReply_Log'
+        ListLoginLogReply_Log:
+            type: object
+            properties:
+                username:
+                    type: string
+                type:
+                    type: string
+                ip:
+                    type: string
+                address:
+                    type: string
+                browser:
+                    type: string
+                device:
+                    type: string
+                code:
+                    type: integer
+                    format: int32
+                description:
+                    type: string
+                createdAt:
+                    type: integer
+                    format: uint32
+                user:
+                    $ref: '#/components/schemas/ListLoginLogReply_User'
+        ListLoginLogReply_User:
+            type: object
+            properties:
+                username:
+                    type: string
+        OAuthBindReply:
+            type: object
+            properties:
+                token:
+                    type: string
+        OAuthBindRequest:
+            type: object
+            properties:
+                username:
+                    type: string
+                password:
+                    type: string
+                captchaId:
+                    type: string
+                captcha:
+                    type: string
+                keyword:
+                    type: string
+                uuid:
+                    type: string
+                tenant:
+                    type: string
+        OAuthHandlerReply:
+            type: object
+            properties:
+                uuid:
+                    type: string
+                action:
+                    type: string
+                value:
+                    type: string
+                tip:
+                    type: string
+                keyword:
+                    type: string
+                codeField:
+                    type: string
+        OAuthHandlerRequest:
+            type: object
+            properties:
+                keyword:
+                    type: string
+                user:
+                    type: string
+        OAuthLoginReply:
+            type: object
+            properties:
+                isBind:
+                    type: boolean
+                token:
+                    type: string
+        OAuthLoginRequest:
+            type: object
+            properties:
+                code:
+                    type: string
+                keyword:
+                    type: string
+                uuid:
+                    type: string
+                user:
+                    type: string
+        ParseTokenReply:
+            type: object
+            properties:
+                userId:
+                    type: integer
+                    format: uint32
+                deptId:
+                    type: integer
+                    format: uint32
+                tenantId:
+                    type: integer
+                    format: uint32
+                username:
+                    type: string
+        ParseTokenRequest:
+            type: object
+            properties:
+                token:
+                    type: string
+        ReportOAuthCodeReply:
+            type: object
+            properties: {}
+        ReportOAuthCodeRequest:
+            type: object
+            properties:
+                code:
+                    type: string
+                keyword:
+                    type: string
+                uuid:
+                    type: string
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UserLoginReply:
+            type: object
+            properties:
+                token:
+                    type: string
+        UserLoginRequest:
+            type: object
+            properties:
+                username:
+                    type: string
+                password:
+                    type: string
+                captchaId:
+                    type: string
+                captcha:
+                    type: string
+                tenant:
+                    type: string
+        UserRefreshTokenReply:
+            type: object
+            properties:
+                token:
+                    type: string
+tags:
+    - name: Auth
